--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,6 @@ header {
   letter-spacing: 0.03em;
 }
 
-
 .advantages-item {
   width: calc((100% - 90px) / 4);
 }
@@ -337,31 +336,18 @@ header {
   margin-left: 30px;
 }
 
-.advantages-list .advantages-item::before {
-  content: "";
-  display: block;
-
+.advantages-icon {
+  width: 70px;
+  height: 70px;
+}
+.advantages-icon-bcg {
+  display: flex;
   width: 270px;
   height: 120px;
-  background-repeat: no-repeat;
-  background-position: center;
+  justify-content: center;
+  align-items: center;
   background-color: var(--team-background-color);
-}
-
-.antenna::before {
-  background-image: url('../images/antenna.svg');
-}
-
-.clock::before {
-  background-image: url('../images/clock.svg');
-}
-
-.diagram::before {
-  background-image: url('../images/diagram.svg');
-}
-
-.astronaut::before {
-  background-image: url('../images/astronaut.svg');
+  border-radius: 4px;
 }
 
 /* General for specialization, team and customers h2*/
